# deepflo

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
assets/ascii/: deep_flo_banner.txt  deepflow_banner.txt
deepflow/: __init__.py
deepflow/utils/: __init__.py  banner.py
deploy/: Dockerfile.deepflow  Dockerfile.runtime  README.md  docker-compose.postgres.yml  docker-compose.stack.yml
docs/: API-REFERENCE.md  ARCHITECTURE.md  INDEX.md  QUICKSTART.md  architecture.md  index.md  roadmap.md  setup.md  status.md  testing.md  why-deepflow.md  workflows.md
editor/: README.md  zed-settings.example.json
examples/langflow/: README.md  deepflow_chat_bridge.json  deepflow_mcp_server_config.json  deepflow_run_flow_recipe.md  deepflow_text_bridge.json
langflow_components/: __init__.py  deepflow_runtime_component.py
memories/: AGENTS.md
openspec/changes/deep-flo-sociology-research-system/: design.md  proposal.md  tasks.md
openspec/changes/methodology-evaluation-skill/: design.md  proposal.md  tasks.md
openspec/changes/methodology-evaluation-skill/specs/methodology-evaluation/: spec.md
scripts/: generate_langflow_examples.py  start_acp.sh  start_compose_stack.sh  start_langflow.sh  start_langflow_postgres.sh  start_mcp_http.sh  start_mcp_stdio.sh  start_postgres.sh  start_runtime.sh  start_stack.sh  stop_compose_stack.sh  stop_postgres.sh
skills/literature-search/: SKILL.md
skills/methodology-evaluation/: SKILL.md
skills/research-dossier/: SKILL.md
skills/source-extraction/: SKILL.md
src/deepflow_runtime/: __init__.py  acp_server.py  agent.py  cli.py  config.py  mcp_server.py  prompts.py  runtime_api.py  server.py  sqlite_compat.py  tools.py
src/deepflow_runtime/utils/: __init__.py  banner.py
tests/: test_agent.py  test_components.py  test_config.py  test_mcp_server.py  test_runtime.py  test_runtime_api.py
